--- a/PR/subsections/workingBrain_PR_StudyInfo.Rmd
+++ b/PR/subsections/workingBrain_PR_StudyInfo.Rmd
@@ -1,7 +1,3 @@
-# Study information
-
-
-
 ## Background 
 
 
@@ -34,7 +30,10 @@ Until recently the impact of working patterns on our neurophysiology has been ov
 
 A multitude of bodily systems react to and interact with sleep-loss, a key set being the body’s inflammatory response, and in particular increased expression of proinflammatory cytokines. Sleep restriction studies consistently found increased levels of interleukin-6 [IL-6; a known risk factor for depression @Howren2009] in response to restricted sleep [@Reinhardt2016], an effect that is resilient to recovery sleep [@Simpson2016]. One mechanism in which this altered inflammatory response affects cognitive and affective processing is via the interoceptive system [@Critchley2013]. Afferent signals from peripheral nerves that embed visceral organs communicate to the brain what is happening physiologically in the body, including sensing inflammation. Interoception interacts with many other cognitive processes, such that our bodily feelings determine the way we behave [@Critchley2017; @Rae2018]. Altogether, this suggests that inflammation, via interoception, can drive how we feel and ultimately how we act. 
 
-Neurally, the most consistent findings associated with inadequate sleep are: (i) amygdala hyper-reactivity to aversive stimuli [@Yoo2007a; @Motomura2014]; (ii) disconnect between frontal regions and the amygdala, as well as the basal ganglia [[@Yoo2007a; @Motomura2013; @Prather2013; @Zhao2018]; (iii) altered structure and function in the fronto-parietal network [@Cui2015; @Krause2017]. Furthermore, given its pivotal role in both interoception and the salience-detection network, the insular cortex is likely to be a key mediator of the neurophysiological changes that result from chronic sleep restriction [@Critchley2013; @Critchley2017; @Rae2018; @Ma2015]. However, very few studies directly investigate interactions between work patterns, inadequate sleep, and physiology, with none of them further assessing neurobiological changes in the same context. This projects will address the resulting gaps in the literature using a combination of population and cognitive neuroscience, epidemiology and immunological methods. 
+Neurally, the most consistent findings associated with inadequate sleep are: (i) amygdala hyper-reactivity to aversive stimuli [@Yoo2007a; @Motomura2014]; (ii) disconnect between frontal regions and the amygdala, as well as the basal ganglia [[@Yoo2007a; @Motomura2013; @Prather2013; @Zhao2018]; (iii) altered structure and function in the fronto-parietal network [@Cui2015; @Krause2017]. Furthermore, given its pivotal role in both interoception and the salience-detection network, the insular cortex is likely to be a key mediator of the neurophysiological changes that result from chronic sleep restriction [@Critchley2013; @Critchley2017; @Rae2018; @Ma2015]. However, very few studies directly investigate interactions between work patterns, inadequate sleep, and physiology, with none of them further assessing neurobiological changes in the same context. 
+
+This projects will address the resulting gaps in the literature using a combination of population neuroscience and epidemiological methods. We will begin by identifying neural markers of occupational wellbeing in the UK Biobank cohort: a population-based prospective study of ~500,000 individuals, a subset of which (~40,000) completed an imaging follow-up, including both task [i.e. emotional face perception; @Hariri2002a] and resting-state functional Magnetic Resonance Imaging (fMRI) [@Sudlow2015]. Following approval by the UK Biobank Access Committee (Project ref. no.: 62188), brain imaging data (i.e. task and resting functional brain MRI data) will be obtained for 35,501 participants, together with blood biochemistry assay results (i.e. C-reactive protein) and a curated selection of sociodemographic, lifestyle and health-related information collected through questionnaires, verbal interviews and census data (e.g. Townsend Deprivation Scores). The complete list of data fields requested can be found at http://tiny.cc/UKBBMetaData_62188 (please note, "Participants" attribute refers to total participants in the cohort with information in the selected "Field", not the number of participants in the dataset linked to the current project). Prior to acessing the imaging data and results of the biochemistry assays, we will explore trends in the non-imaging/-biochemical data. This will allow us to generate precise confirmatory hypotheses and specify predictions with regards to effects of occupational factors on imaging and physiological features, while taking into account complex contextual information. All analysis workflows, together with time-stamped logs detailing data access, handling, and transformation events will be linked to a future registration.
 
 ## Hypotheses and predictions
 
+At this stage, we aim to take an exploratory approach to our investigation and therefore submit no hypotheses or predictions. Details of the exploratory analyses planned can be found under the *Analysis Plan* section.
