--- a/PR/workingBrain_PR_Main.tex
+++ b/PR/workingBrain_PR_Main.tex
@@ -165,7 +165,7 @@ Two or three sentences to provide a \textbf{broader perspective}, readily compre
 \hypertarget{background}{%
 \subsection{Background}\label{background}}
 
-Work takes up a huge chunk of our adult lives: the average Briton works approximately 42 hours per week (TUC, 2019b), with an additional \textasciitilde4.9 hours spent on commuting (TUC, 2019a), and an estimate of \textasciitilde10.1 hours in unpaid overtime (TotallyMoney, 2019). These numbers have been growing in the past 30 years (TotallyMoney, 2019; TUC, 2019b, 2019a) without benefits to productivity. Importantly, a growing body of evidence suggests a strong negative impact on our health and wellbeing. Long working hours are associated with higher risk of cardiovascular disease (Bannai \& Tamakoshi, 2014), higher incidence of depressive (Kim, Park, Lee, \& Kim, 2016), and anxiety symptoms (Bannai \& Tamakoshi, 2014), deficient cognitive function (Kajitani, McKenzie, \& Sakata, 2018), and adverse physiological changes (Hulst, 2003). Moreover, interventional studies show that a reduction in working hours benefits both health and productivity (Akerstedt, Olsson, Ingre, Holmgren, \& Kecklund, 2001; Barck-Holst et al., 2017). However, we do not yet understand the neurobiological implications of our modern, increasingly intense, working patterns. Three reasons motivate the need for such an understanding:
+Work takes up a huge chunk of our adult lives: the average Briton works approximately 42 hours per week,\textsuperscript{{[}1{]}} with an additional \textasciitilde4.9 hours spent on commuting,\textsuperscript{{[}2{]}} and an estimate of \textasciitilde10.1 hours in unpaid overtime.\textsuperscript{{[}3{]}} These numbers have been growing in the past 30 years\textsuperscript{{[}1--3{]}} without benefits to productivity. Importantly, a growing body of evidence suggests a strong negative impact on our health and wellbeing. Long working hours are associated with higher risk of cardiovascular disease,\textsuperscript{{[}4{]}} higher incidence of depressive,\textsuperscript{{[}5{]}} and anxiety symptoms,\textsuperscript{{[}4{]}} deficient cognitive function,\textsuperscript{{[}6{]}} and adverse physiological changes.\textsuperscript{{[}7{]}} Moreover, interventional studies show that a reduction in working hours benefits both health and productivity.\textsuperscript{{[}8,9{]}} However, we do not yet understand the neurobiological implications of our modern, increasingly intense, working patterns. Three reasons motivate the need for such an understanding:
 
 \begin{itemize}
 \item
@@ -200,14 +200,106 @@ Progress against these objectives will help develop a holistic insight into why 
 \hypertarget{rationale}{%
 \subsection{Rationale}\label{rationale}}
 
-Until recently the impact of working patterns on our neurophysiology has been overlooked, therefore it is difficult to formulate an investigative plan that directly builds on prior work. However, I have identified inadequate sleep as the principal means through which the influence of occupational factors on wellbeing is likely to manifest. First, relative to all other activities, work is the primary waking activity exchanged for sleep (Basner, Spaeth, \& Dinges, 2014). Second, it is becoming increasingly common for workers to accumulate sleep debt throughout the working week and attempt to catch-up on the weekend, a countermeasure that has been shown to be ineffective in combating the deleterious effects of weekday sleep debt (Basner, Dinges, \& Basner, 2018; Buxton et al., 2010; Reinhardt, Fernandes, Markus, \& Fischer, 2016; Simpson et al., 2016). Finally, working longer hours is associated with significantly reduced sleep duration and quality (Marucci-Wellman, Lombardi, \& Willetts, 2016, p. @VanderHulst2003). Therefore, we will use the known neuronal and physiological mechanisms of sleep, and in particular sleep restriction, to help guide the incipient stage of our investigation.
+Until recently the impact of working patterns on our neurophysiology has been overlooked, therefore it is difficult to formulate an investigative plan that directly builds on prior work. However, we have identified inadequate sleep as the principal means through which the influence of occupational factors on wellbeing is likely to manifest. First, relative to all other activities, work is the primary waking activity exchanged for sleep.\textsuperscript{{[}10{]}} Second, it is becoming increasingly common for workers to accumulate sleep debt throughout the working week and attempt to catch-up on the weekend, a countermeasure that has been shown to be ineffective in combating the deleterious effects of weekday sleep debt.\textsuperscript{{[}11--14{]}} Finally, working longer hours is associated with significantly reduced sleep duration and quality.\textsuperscript{{[}15{]}} Therefore, we will use the known neuronal and physiological mechanisms of sleep, and in particular sleep restriction, to help guide the incipient stage of our investigation.
 
-A multitude of bodily systems react to and interact with sleep-loss, a key set being the body's inflammatory response, and in particular increased expression of proinflammatory cytokines. Sleep restriction studies consistently found increased levels of interleukin-6 (IL-6; a known risk factor for depression Howren, Lamkin, \& Suls, 2009) in response to restricted sleep (Reinhardt et al., 2016), an effect that is resilient to recovery sleep (Simpson et al., 2016). One mechanism in which this altered inflammatory response affects cognitive and affective processing is via the interoceptive system (Critchley \& Harrison, 2013). Afferent signals from peripheral nerves that embed visceral organs communicate to the brain what is happening physiologically in the body, including sensing inflammation. Interoception interacts with many other cognitive processes, such that our bodily feelings determine the way we behave (Critchley \& Garfinkel, 2017; Rae et al., 2018). Altogether, this suggests that inflammation, via interoception, can drive how we feel and ultimately how we act.
+A multitude of bodily systems react to and interact with sleep-loss, a key set being the body's inflammatory response, and in particular increased expression of proinflammatory cytokines. Sleep restriction studies consistently found increased levels of interleukin-6\textsuperscript{{[}16{]}} in response to restricted sleep,\textsuperscript{{[}13{]}} an effect that is resilient to recovery sleep.\textsuperscript{{[}12{]}} One mechanism in which this altered inflammatory response affects cognitive and affective processing is via the interoceptive system.\textsuperscript{{[}17{]}} Afferent signals from peripheral nerves that embed visceral organs communicate to the brain what is happening physiologically in the body, including sensing inflammation. Interoception interacts with many other cognitive processes, such that our bodily feelings determine the way we behave.\textsuperscript{{[}18,19{]}} Altogether, this suggests that inflammation, via interoception, can drive how we feel and ultimately how we act.
 
-Neurally, the most consistent findings associated with inadequate sleep are: (i) amygdala hyper-reactivity to aversive stimuli (Motomura et al., 2014; Yoo, Gujar, Hu, Jolesz, \& Walker, 2007); (ii) disconnect between frontal regions and the amygdala, as well as the basal ganglia {[}(Motomura et al., 2013; Prather, Bogdan, \& Hariri, 2013; Yoo et al., 2007; Zhao et al., 2018); (iii) altered structure and function in the fronto-parietal network (Cui et al., 2015; Krause et al., 2017). Furthermore, given its pivotal role in both interoception and the salience-detection network, the insular cortex is likely to be a key mediator of the neurophysiological changes that result from chronic sleep restriction (Critchley \& Garfinkel, 2017; Critchley \& Harrison, 2013; Ma, Dinges, Basner, \& Rao, 2015; Rae et al., 2018). However, very few studies directly investigate interactions between work patterns, inadequate sleep, and physiology, with none of them further assessing neurobiological changes in the same context. This projects will address the resulting gaps in the literature using a combination of population and cognitive neuroscience, epidemiology and immunological methods.
+Neurally, the most consistent findings associated with inadequate sleep are: (i) amygdala hyper-reactivity to aversive stimuli;\textsuperscript{{[}20,21{]}} (ii) disconnect between frontal regions and the amygdala, as well as the basal ganglia {[}\textsuperscript{{[}20,22--24{]}}; (iii) altered structure and function in the fronto-parietal network.\textsuperscript{{[}25,26{]}} Furthermore, given its pivotal role in both interoception and the salience-detection network, the insular cortex is likely to be a key mediator of the neurophysiological changes that result from chronic sleep restriction.\textsuperscript{{[}17--19,27{]}} However, very few studies directly investigate interactions between work patterns, inadequate sleep, and physiology, with none of them further assessing neurobiological changes in the same context. This projects will address the resulting gaps in the literature using a combination of population and cognitive neuroscience, epidemiology and immunological methods.
 
 \hypertarget{hypotheses-and-predictions}{%
 \subsection{Hypotheses and predictions}\label{hypotheses-and-predictions}}
+
+\begingroup
+\setlength{\parindent}{-0.5in}
+\setlength{\leftskip}{0.5in}
+
+\hypertarget{refs}{}
+\begin{cslreferences}
+\leavevmode\hypertarget{ref-TUC1}{}%
+1. TUC. (2019). British workers putting in longest hours in the EU, TUC analysis finds. Retrieved from \url{https://www.tuc.org.uk/news/british-workers-putting-longest-hours-eu-tuc-analysis-finds}
+
+\leavevmode\hypertarget{ref-TUC2}{}%
+2. TUC. (2019). Annual commuting time is up 21 hours compared to a decade ago, finds TUC. Retrieved from \url{https://www.tuc.org.uk/news/annual-commuting-time-21-hours-compared-decade-ago-finds-tuc}
+
+\leavevmode\hypertarget{ref-TotallyMoney}{}%
+3. TotallyMoney. (2019). Overtime Survey 2018 - how much overtime does the UK work? Retrieved from \url{https://www.totallymoney.com/overtime-survey/}
+
+\leavevmode\hypertarget{ref-Bannai2014}{}%
+4. Bannai, A., \& Tamakoshi, A. (2014). The association between long working hours and health: A systematic review of epidemiological evidence. \emph{Scandinavian Journal of Work, Environment \& Health}, \emph{40}(1), 5--18. \url{http://dx.doi.org/10.5271/sjweh.3388}
+
+\leavevmode\hypertarget{ref-Kim2016}{}%
+5. Kim, W., Park, E. C., Lee, T. H., \& Kim, T. H. (2016). Effect of working hours and precarious employment on depressive symptoms in South Korean employees: A longitudinal study. \emph{Occupational and Environmental Medicine}, \emph{73}(12), 816--822. \url{http://dx.doi.org/10.1136/oemed-2016-103553}
+
+\leavevmode\hypertarget{ref-Kajitani2018}{}%
+6. Kajitani, S., McKenzie, C., \& Sakata, K. (2018). Use It Too Much and Lose It? The Effect of Working Hours on Cognitive Ability. \emph{SSRN Electronic Journal}. \url{http://dx.doi.org/10.2139/ssrn.2737742}
+
+\leavevmode\hypertarget{ref-VanderHulst2003}{}%
+7. Hulst, M. van der. (2003). Long workhours and health. Finnish Institute of Occupational Health. \url{http://dx.doi.org/10.5271/sjweh.720}
+
+\leavevmode\hypertarget{ref-Akerstedt2001}{}%
+8. Akerstedt, T., Olsson, B., Ingre, M., Holmgren, M., \& Kecklund, G. (2001). \emph{A 6-hour working day--effects on health and well-being.} (Vol. 30, pp. 197--202). \url{http://dx.doi.org/10.11183/jhe1972.30.197}
+
+\leavevmode\hypertarget{ref-Barck-Holst2017}{}%
+9. Barck-Holst, P., Institutet, K., Åkerstedt, S. T., Hellgren, C., Nilsonne, Å., Åkerstedt, T., \ldots{} Hellgren, C. (2017). Reduced working hours and stress in the Swedish social services: A longitudinal study. \emph{International Social Work}, \emph{60}(4), 897--913. \url{http://dx.doi.org/10.1177/0020872815580045}
+
+\leavevmode\hypertarget{ref-Basner2014}{}%
+10. Basner, M., Spaeth, A. M., \& Dinges, D. F. (2014). Sociodemographic Characteristics and Waking Activities and their Role in the Timing and Duration of Sleep. \emph{Sleep}, \emph{37}(12), 1889--1906. \url{http://dx.doi.org/10.5665/sleep.4238}
+
+\leavevmode\hypertarget{ref-Basner2018}{}%
+11. Basner, M., Dinges, D. F., \& Basner, M. (2018). Ac c te d us cr ip t pt cr t. \emph{Sleep}, \emph{41}(4), zsy012. \url{http://dx.doi.org/10.1093/sleep/zsy012/4792945}
+
+\leavevmode\hypertarget{ref-Simpson2016}{}%
+12. Simpson, N. S., Diolombi, M., Scott-Sutherland, J., Yang, H., Bhatt, V., Gautam, S., \ldots{} Haack, M. (2016). Repeating patterns of sleep restriction and recovery: Do we get used to it? \emph{Brain, Behavior, and Immunity}, \emph{58}, 142--151. \url{http://dx.doi.org/10.1016/j.bbi.2016.06.001}
+
+\leavevmode\hypertarget{ref-Reinhardt2016}{}%
+13. Reinhardt, É. L., Fernandes, P. A. C. M. C. M., Markus, R. P., \& Fischer, F. M. (2016). Short sleep duration increases salivary IL-6 production. \emph{Chronobiology International}, \emph{33}(6), 780--782. \url{http://dx.doi.org/10.3109/07420528.2016.1167710}
+
+\leavevmode\hypertarget{ref-Buxton2010}{}%
+14. Buxton, O. M., Pavlova, M., Reid, E. W., Wang, W., Simonson, D. C., \& Adler, G. K. (2010). Sleep restriction for 1 week reduces insulin sensitivity in healthy men. \emph{Diabetes}, \emph{59}(9), 2126--2133. \url{http://dx.doi.org/10.2337/db09-0699}
+
+\leavevmode\hypertarget{ref-Marucci-Wellman2016}{}%
+15. Marucci-Wellman, H. R., Lombardi, D. A., \& Willetts, J. L. (2016). Chronobiology International The Journal of Biological and Medical Rhythm Research Working multiple jobs over a day or a week: Short-term effects on sleep duration. \url{http://dx.doi.org/10.3109/07420528.2016.1167717}
+
+\leavevmode\hypertarget{ref-Howren2009}{}%
+16. Howren, M. B., Lamkin, D. M., \& Suls, J. (2009). Associations of depression with c-reactive protein, IL-1, and IL-6: A meta-analysis. \emph{Psychosomatic Medicine}, \emph{71}(2), 171--186. \url{http://dx.doi.org/10.1097/PSY.0b013e3181907c1b}
+
+\leavevmode\hypertarget{ref-Critchley2013}{}%
+17. Critchley, H. D., \& Harrison, N. A. (2013, February). Visceral Influences on Brain and Behavior. Cell Press. \url{http://dx.doi.org/10.1016/j.neuron.2013.02.008}
+
+\leavevmode\hypertarget{ref-Critchley2017}{}%
+18. Critchley, H. D., \& Garfinkel, S. N. (2017). Interoception and emotion. \emph{Current Opinion in Psychology}, \emph{17}, 7--14. \url{http://dx.doi.org/10.1016/j.copsyc.2017.04.020}
+
+\leavevmode\hypertarget{ref-Rae2018}{}%
+19. Rae, C., Botan, V. E., Gould Van Praag, C. D., Herman, A. M., Nyyssönen, J. A. K., Watson, D. R., \ldots{} Critchley, H. D. (2018). Response inhibition on the stop signal task improves during cardiac contraction. \emph{Scientific Reports}, \emph{8}(1). \url{http://dx.doi.org/10.1038/s41598-018-27513-y}
+
+\leavevmode\hypertarget{ref-Yoo2007a}{}%
+20. Yoo, S. S., Gujar, N., Hu, P., Jolesz, F. A., \& Walker, M. P. (2007, October). The human emotional brain without sleep - a prefrontal amygdala disconnect. Elsevier. \url{http://dx.doi.org/10.1016/j.cub.2007.08.007}
+
+\leavevmode\hypertarget{ref-Motomura2014}{}%
+21. Motomura, Y., Kitamura, S., Oba, K., Terasawa, Y., Enomoto, M., Katayose, Y., \ldots{} Mishima, K. (2014). \emph{Sleepiness induced by sleep-debt enhanced amygdala activity for subliminal signals of fear}. \url{http://dx.doi.org/10.1186/1471-2202-15-97}
+
+\leavevmode\hypertarget{ref-Motomura2013}{}%
+22. Motomura, Y., Kitamura, S., Oba, K., Terasawa, Y., Enomoto, M., Katayose, Y., \ldots{} Mishima, K. (2013). Sleep Debt Elicits Negative Emotional Reaction through Diminished Amygdala-Anterior Cingulate Functional Connectivity. \emph{PLoS ONE}, \emph{8}(2), e56578. \url{http://dx.doi.org/10.1371/journal.pone.0056578}
+
+\leavevmode\hypertarget{ref-Prather2013}{}%
+23. Prather, A. A., Bogdan, R., \& Hariri, A. R. (2013). Impact of sleep quality on amygdala reactivity, negative affect, and perceived stress. \emph{Psychosomatic Medicine}, \emph{75}(4), 350--358. \url{http://dx.doi.org/10.1097/PSY.0b013e31828ef15b}
+
+\leavevmode\hypertarget{ref-Zhao2018}{}%
+24. Zhao, R., Zhang, X., Fei, N., Zhu, Y., Sun, J., Liu, P., \ldots{} Qin, W. (2018). Decreased cortical and subcortical response to inhibition control after sleep deprivation. \emph{Brain Imaging and Behavior}, \emph{13}(3), 638--650. \url{http://dx.doi.org/10.1007/s11682-018-9868-2}
+
+\leavevmode\hypertarget{ref-Cui2015}{}%
+25. Cui, J., Tkachenko, O., Gogel, H., Kipman, M., Preer, L. A., Weber, M., \ldots{} Killgore, W. D. S. (2015). Microstructure of frontoparietal connections predicts individual resistance to sleep deprivation. \emph{NeuroImage}, \emph{106}, 123--133. \url{http://dx.doi.org/10.1016/j.neuroimage.2014.11.035}
+
+\leavevmode\hypertarget{ref-Krause2017}{}%
+26. Krause, A. J., Simon, E. B., Mander, B. A., Greer, S. M., Saletin, J. M., Goldstein-Piekarski, A. N., \& Walker, M. P. (2017, July). The sleep-deprived human brain. Nature Publishing Group. \url{http://dx.doi.org/10.1038/nrn.2017.55}
+
+\leavevmode\hypertarget{ref-Ma2015}{}%
+27. Ma, N., Dinges, D. F., Basner, M., \& Rao, H. (2015). How Acute Total Sleep Loss Affects the Attending Brain: A Meta-Analysis of Neuroimaging Studies. \emph{Sleep}, \emph{38}(2), 233--240. \url{http://dx.doi.org/10.5665/sleep.4404}
+\end{cslreferences}
+
+\endgroup
+
+\newpage
 
 \hypertarget{design-plan}{%
 \section{Design Plan}\label{design-plan}}
@@ -226,98 +318,5 @@ Blinding describes who is aware of the experimenta manipulations within a study.
 \subsection{3. Study design}\label{study-design}}
 
 \newpage
-
-\hypertarget{references}{%
-\section{References}\label{references}}
-
-\begingroup
-\setlength{\parindent}{-0.5in}
-\setlength{\leftskip}{0.5in}
-
-\hypertarget{refs}{}
-\begin{cslreferences}
-\leavevmode\hypertarget{ref-Akerstedt2001}{}%
-Akerstedt, T., Olsson, B., Ingre, M., Holmgren, M., \& Kecklund, G. (2001). \emph{A 6-hour working day--effects on health and well-being.} (No. 1-2) (Vol. 30, pp. 197--202). \url{https://doi.org/10.11183/jhe1972.30.197}
-
-\leavevmode\hypertarget{ref-Bannai2014}{}%
-Bannai, A., \& Tamakoshi, A. (2014). The association between long working hours and health: A systematic review of epidemiological evidence. \emph{Scandinavian Journal of Work, Environment \& Health}, \emph{40}(1), 5--18. \url{https://doi.org/10.5271/sjweh.3388}
-
-\leavevmode\hypertarget{ref-Barck-Holst2017}{}%
-Barck-Holst, P., Institutet, K., Åkerstedt, S. T., Hellgren, C., Nilsonne, Å., Åkerstedt, T., \ldots{} Hellgren, C. (2017). Reduced working hours and stress in the Swedish social services: A longitudinal study. \emph{International Social Work}, \emph{60}(4), 897--913. \url{https://doi.org/10.1177/0020872815580045}
-
-\leavevmode\hypertarget{ref-Basner2018}{}%
-Basner, M., Dinges, D. F., \& Basner, M. (2018). Ac c te d us cr ip t pt cr t. \emph{Sleep}, \emph{41}(4), zsy012. \url{https://doi.org/10.1093/sleep/zsy012/4792945}
-
-\leavevmode\hypertarget{ref-Basner2014}{}%
-Basner, M., Spaeth, A. M., \& Dinges, D. F. (2014). Sociodemographic Characteristics and Waking Activities and their Role in the Timing and Duration of Sleep. \emph{Sleep}, \emph{37}(12), 1889--1906. \url{https://doi.org/10.5665/sleep.4238}
-
-\leavevmode\hypertarget{ref-Buxton2010}{}%
-Buxton, O. M., Pavlova, M., Reid, E. W., Wang, W., Simonson, D. C., \& Adler, G. K. (2010). Sleep restriction for 1 week reduces insulin sensitivity in healthy men. \emph{Diabetes}, \emph{59}(9), 2126--2133. \url{https://doi.org/10.2337/db09-0699}
-
-\leavevmode\hypertarget{ref-Critchley2017}{}%
-Critchley, H. D., \& Garfinkel, S. N. (2017). Interoception and emotion. \emph{Current Opinion in Psychology}, \emph{17}, 7--14. \url{https://doi.org/10.1016/j.copsyc.2017.04.020}
-
-\leavevmode\hypertarget{ref-Critchley2013}{}%
-Critchley, H. D., \& Harrison, N. A. (2013). Visceral Influences on Brain and Behavior. Cell Press. \url{https://doi.org/10.1016/j.neuron.2013.02.008}
-
-\leavevmode\hypertarget{ref-Cui2015}{}%
-Cui, J., Tkachenko, O., Gogel, H., Kipman, M., Preer, L. A., Weber, M., \ldots{} Killgore, W. D. S. (2015). Microstructure of frontoparietal connections predicts individual resistance to sleep deprivation. \emph{NeuroImage}, \emph{106}, 123--133. \url{https://doi.org/10.1016/j.neuroimage.2014.11.035}
-
-\leavevmode\hypertarget{ref-Howren2009}{}%
-Howren, M. B., Lamkin, D. M., \& Suls, J. (2009). Associations of depression with c-reactive protein, IL-1, and IL-6: A meta-analysis. \emph{Psychosomatic Medicine}, \emph{71}(2), 171--186. \url{https://doi.org/10.1097/PSY.0b013e3181907c1b}
-
-\leavevmode\hypertarget{ref-VanderHulst2003}{}%
-Hulst, M. van der. (2003). Long workhours and health. Finnish Institute of Occupational Health. \url{https://doi.org/10.5271/sjweh.720}
-
-\leavevmode\hypertarget{ref-Kajitani2018}{}%
-Kajitani, S., McKenzie, C., \& Sakata, K. (2018). Use It Too Much and Lose It? The Effect of Working Hours on Cognitive Ability. \emph{SSRN Electronic Journal}. \url{https://doi.org/10.2139/ssrn.2737742}
-
-\leavevmode\hypertarget{ref-Kim2016}{}%
-Kim, W., Park, E. C., Lee, T. H., \& Kim, T. H. (2016). Effect of working hours and precarious employment on depressive symptoms in South Korean employees: A longitudinal study. \emph{Occupational and Environmental Medicine}, \emph{73}(12), 816--822. \url{https://doi.org/10.1136/oemed-2016-103553}
-
-\leavevmode\hypertarget{ref-Krause2017}{}%
-Krause, A. J., Simon, E. B., Mander, B. A., Greer, S. M., Saletin, J. M., Goldstein-Piekarski, A. N., \& Walker, M. P. (2017). The sleep-deprived human brain. Nature Publishing Group. \url{https://doi.org/10.1038/nrn.2017.55}
-
-\leavevmode\hypertarget{ref-Ma2015}{}%
-Ma, N., Dinges, D. F., Basner, M., \& Rao, H. (2015). How Acute Total Sleep Loss Affects the Attending Brain: A Meta-Analysis of Neuroimaging Studies. \emph{Sleep}, \emph{38}(2), 233--240. \url{https://doi.org/10.5665/sleep.4404}
-
-\leavevmode\hypertarget{ref-Marucci-Wellman2016}{}%
-Marucci-Wellman, H. R., Lombardi, D. A., \& Willetts, J. L. (2016). Chronobiology International The Journal of Biological and Medical Rhythm Research Working multiple jobs over a day or a week: Short-term effects on sleep duration. \url{https://doi.org/10.3109/07420528.2016.1167717}
-
-\leavevmode\hypertarget{ref-Motomura2013}{}%
-Motomura, Y., Kitamura, S., Oba, K., Terasawa, Y., Enomoto, M., Katayose, Y., \ldots{} Mishima, K. (2013). Sleep Debt Elicits Negative Emotional Reaction through Diminished Amygdala-Anterior Cingulate Functional Connectivity. \emph{PLoS ONE}, \emph{8}(2), e56578. \url{https://doi.org/10.1371/journal.pone.0056578}
-
-\leavevmode\hypertarget{ref-Motomura2014}{}%
-Motomura, Y., Kitamura, S., Oba, K., Terasawa, Y., Enomoto, M., Katayose, Y., \ldots{} Mishima, K. (2014). \emph{Sleepiness induced by sleep-debt enhanced amygdala activity for subliminal signals of fear}. \url{https://doi.org/10.1186/1471-2202-15-97}
-
-\leavevmode\hypertarget{ref-Prather2013}{}%
-Prather, A. A., Bogdan, R., \& Hariri, A. R. (2013). Impact of sleep quality on amygdala reactivity, negative affect, and perceived stress. \emph{Psychosomatic Medicine}, \emph{75}(4), 350--358. \url{https://doi.org/10.1097/PSY.0b013e31828ef15b}
-
-\leavevmode\hypertarget{ref-Rae2018}{}%
-Rae, C., Botan, V. E., Gould Van Praag, C. D., Herman, A. M., Nyyssönen, J. A. K., Watson, D. R., \ldots{} Critchley, H. D. (2018). Response inhibition on the stop signal task improves during cardiac contraction. \emph{Scientific Reports}, \emph{8}(1). \url{https://doi.org/10.1038/s41598-018-27513-y}
-
-\leavevmode\hypertarget{ref-Reinhardt2016}{}%
-Reinhardt, É. L., Fernandes, P. A. C. M. C. M., Markus, R. P., \& Fischer, F. M. (2016). Short sleep duration increases salivary IL-6 production. \emph{Chronobiology International}, \emph{33}(6), 780--782. \url{https://doi.org/10.3109/07420528.2016.1167710}
-
-\leavevmode\hypertarget{ref-Simpson2016}{}%
-Simpson, N. S., Diolombi, M., Scott-Sutherland, J., Yang, H., Bhatt, V., Gautam, S., \ldots{} Haack, M. (2016). Repeating patterns of sleep restriction and recovery: Do we get used to it? \emph{Brain, Behavior, and Immunity}, \emph{58}, 142--151. \url{https://doi.org/10.1016/j.bbi.2016.06.001}
-
-\leavevmode\hypertarget{ref-TotallyMoney}{}%
-TotallyMoney. (2019). Overtime Survey 2018 - how much overtime does the UK work? Retrieved from \url{https://www.totallymoney.com/overtime-survey/}
-
-\leavevmode\hypertarget{ref-TUC2}{}%
-TUC. (2019a). Annual commuting time is up 21 hours compared to a decade ago, finds TUC. Retrieved from \url{https://www.tuc.org.uk/news/annual-commuting-time-21-hours-compared-decade-ago-finds-tuc}
-
-\leavevmode\hypertarget{ref-TUC1}{}%
-TUC. (2019b). British workers putting in longest hours in the EU, TUC analysis finds. Retrieved from \url{https://www.tuc.org.uk/news/british-workers-putting-longest-hours-eu-tuc-analysis-finds}
-
-\leavevmode\hypertarget{ref-Yoo2007a}{}%
-Yoo, S. S., Gujar, N., Hu, P., Jolesz, F. A., \& Walker, M. P. (2007). The human emotional brain without sleep - a prefrontal amygdala disconnect. Elsevier. \url{https://doi.org/10.1016/j.cub.2007.08.007}
-
-\leavevmode\hypertarget{ref-Zhao2018}{}%
-Zhao, R., Zhang, X., Fei, N., Zhu, Y., Sun, J., Liu, P., \ldots{} Qin, W. (2018). Decreased cortical and subcortical response to inhibition control after sleep deprivation. \emph{Brain Imaging and Behavior}, \emph{13}(3), 638--650. \url{https://doi.org/10.1007/s11682-018-9868-2}
-\end{cslreferences}
-
-\endgroup
 
 \end{document}
